<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".helpandsupport.CreditsFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/about_us_String"
        style="@style/new_pet_text_style"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/credits_1"
        style="@style/new_pet_text_style"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textAlignment="center"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/credits_3"
        style="@style/new_pet_text_style"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textAlignment="center"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/credits_4"
        style="@style/new_pet_text_style"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/credits_5"
        style="@style/new_pet_text_style"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textIsSelectable="true"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/credits_6"
        style="@style/new_pet_text_style"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textIsSelectable="true"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/credits_2"
        style="@style/new_pet_text_style"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="23sp"/>

</LinearLayout>
</ScrollView>