<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".settings.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/changeNameButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="45dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/proxima_nova"
            android:text="@string/change_name_button"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="0"
            style="@style/enter_arrow"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/changeEmailButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/changeNameButton"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/proxima_nova"
            android:text="@string/change_email_button"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="0"
            style="@style/enter_arrow"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/changePasswordButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/changeEmailButton"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/proxima_nova"
            android:text="@string/change_password_button"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="0"
            style="@style/enter_arrow"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/changeProfilePicButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordButton"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/proxima_nova"
            android:text="@string/change_profile_pic_button"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="0"
            style="@style/enter_arrow"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/resetPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/changeProfilePicButton"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/proxima_nova"
            android:text="@string/reset_password_button"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="0"
            style="@style/enter_arrow"
            tools:ignore="ContentDescription" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        ads:adSize="BANNER"
        ads:adUnitId="@string/settingsActivityAdID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>