<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".signOut.SignOutActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="0dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sign_out_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_700"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:id="@+id/signoutButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        ads:layout_constraintTop_toBottomOf="@id/sign_out_toolbar">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="0"
            style="@style/ic_action_signout"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/proxima_nova"
            android:text="@string/signOutButtonString"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="0"
            style="@style/enter_arrow"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/deleteAccountButton"
        android:layout_below="@id/signoutButton"
        ads:layout_constraintTop_toBottomOf="@id/signoutButton">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            style="@style/delete_account_button"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            tools:ignore="ContentDescription"
            android:layout_weight="0"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/deleteAccountButtonString"
            android:textSize="25sp"
            android:fontFamily="@font/proxima_nova"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            style="@style/enter_arrow"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            tools:ignore="ContentDescription"
            android:layout_weight="0"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/logoutActivityAdID"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
