<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myads.MyAds">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addPetFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:elevation="0dp"
        android:focusable="true"
        style="@style/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_my_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_ads_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:id="@+id/empty_list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gif"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="#ffffff"
            android:src="@drawable/empty_list_view"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/new_pet_text_style"
            android:textStyle="bold"
            android:text="@string/myads_empty_list_view_string1"
            android:layout_below="@id/gif"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            style="@style/new_pet_text_style"
            android:textStyle="bold"
            android:text="@string/myads_empty_list_view_string2"
            android:layout_below="@id/text1"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/error_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/error_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            style="@style/error_icon" />

        <TextView
            android:id="@+id/error_text"
            style="@style/new_pet_text_style"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/error_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/error_occured_string"
            android:textAlignment="center"
            android:textStyle="bold" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/myAds_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>